# inspect-india-evals

./: .gitignore  README.md  pyproject.toml  run_all.py
india_evals/: __init__.py
india_evals/bias/: __init__.py  metrics.py  task.py
india_evals/cultural_knowledge/: __init__.py  task.py
india_evals/cultural_knowledge/datasets/: Cultural_knowledge_rubric_dataset.json
india_evals/dpi_safety/: __init__.py  task.py
india_evals/dpi_safety/datasets/: dpi_dataset.csv
india_evals/multilingual/: __init__.py  metrics.py  task.py
india_evals/multilingual/datasets/: mmlu_translated.csv
india_evals/safeguards/: __init__.py  task.py
india_evals/safeguards/datasets/: jailbreak_multilingual.csv  safety.csv
india_evals/scorers/: __init__.py  fairness.py
india_evals/view_plugin/: __init__.py  __main__.py  heatmap.py  parser.py
scripts/: expand_mmlu_16_langs.py
tests/: __init__.py  test_bias.py  test_cultural_knowledge.py  test_dpi_safety.py  test_fairness.py  test_multilingual.py  test_safeguards.py
