[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "inspect-india-evals"
version = "0.1.0"
description = "India-specific AI safety, bias, and fairness evaluations for Inspect AI"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "inspect-ai",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "mlflow>=2",
]
viz = [
    "plotly>=5",
]

[project.scripts]
india-view = "india_evals.view_plugin.__main__:main"

[project.urls]
Repository = "https://github.com/MetaFazer/inspect-india-evals"

[tool.setuptools.packages.find]
include = ["india_evals*"]

[tool.setuptools.package-data]
india_evals = ["*/**/*.json", "*/**/*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
